# cli

./: .pre-commit-config.yaml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
encde/: Cargo.toml
encde/derive/: Cargo.toml
encde/derive/src/: attrs.rs  tracker.rs
encde/src/: lib.rs  trivial.rs  util.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/crc/: for_u16.rs  for_u32.rs  mod.rs  serial_port.rs
lib/src/device/: error.rs  mod.rs  receive.rs  response_byte.rs  send.rs
lib/src/program/: mod.rs
lib/src/util/: mod.rs  presence.rs
src/: commands.rs  crc.rs  device.rs  logging.rs  main.rs  presence.rs  util.rs
src/commands/: device.rs  filesystem.rs  mod.rs  program.rs  query.rs
src/commands/device/: info.rs  list.rs  mod.rs  screen_capture.rs
src/commands/filesystem/: cat.rs  cp.rs  edit.rs  info.rs  ls.rs  mod.rs  mount.rs  pull.rs  push.rs  rm.rs  sponge.rs
src/commands/program/: info.rs  list.rs  mod.rs  remove.rs  run.rs  stop.rs  upload.rs
src/commands/query/: list.rs  screen_capture.rs
src/crc/: mod.rs  serial_port.rs
src/device/: discover.rs  error.rs  filesystem.rs  helpers.rs  mod.rs  receive.rs  response_byte.rs  send.rs
src/device/discover/: classification.rs  error.rs  location.rs  mod.rs  uploadable_info.rs  uploadable_type.rs  usb_port.rs
src/device/filesystem/: args.rs  category.rs  channel.rs  fixed_string.rs  function.rs  mod.rs  qual.rs  target.rs  timestamp.rs
src/device/helpers/: mod.rs  version.rs
src/device/impl/: entities.rs  file_transfer.rs  from.rs  mod.rs  public.rs  receive.rs  screen_capture.rs  send.rs  timeout.rs  trivial.rs
src/fuse/: mod.rs
src/logging/: init.rs  logger.rs  mod.rs
src/program/: mod.rs
src/util/: diff.rs  mod.rs  num.rs  presence.rs  temp_dir.rs
(+46 files in other folders)
