[package]
name = "reveng-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
clap = { version = "3.0.5", features = [
	"derive",
	"cargo",
	"unicode",
	"std",
	"suggestions",
], default_features = false }
encde = { path = "encde", features = ["derive"] }
log = "0.4.14"
num_enum = "0.5.6"
phf = { version = "0.10", features = ["macros"] }
serialport = "4.0.1"

[features]

[workspace]
members = [".", "encde", "encde/derive"]
