[package]
name = "reveng-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
clap = { version = "3.0.5", features = [
	"derive",
	"cargo",
	"unicode",
	"std",
	"suggestions",
], default_features = false }
clap-num = "1.0.0"
encde = { path = "encde", features = ["derive"] }
log = "0.4.14"
phf = { version = "0.10", features = ["macros"] }
png = "0.17.2"
rand = "0.8.4"
serialport = "4.0.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_ini = "0.2.0"

[features]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.30.0", features = ["Win32_Foundation", "Win32_Devices_Usb", "Win32_Storage_FileSystem", "Win32_Security"] }

[workspace]
members = [".", "encde", "encde/derive"]
